# final-project-the-mathletes

./: .breakpoints  README.md  main.py  pyproject.toml  tkinter.py
assets/: properties.json
src/: button.py  card.py  controller.py  die.py  player.py  property.py  utility.py
