[tool.poetry]
name = "repl_pygame_beta_final-project-the-mathletes"
version = "0.1.0"
description = ""
authors = ["Aviva-JJ <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.1.2"
kissdownloader = "^2"
pygame-menu = "^4.2"
tabulate = "^0.8.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
